# rdoc-fmri-experiments

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  rsync.sh  run.sh  setup.py
.analyze/: .gitignore  README.md  create_env.sh  main.py
.deploy/: .gitignore  README.md  clone_and_create_env.sh
.designs/: README.md  create_and_move_designs.sh  get_longest_designs.py  longest_designs.csv  trim_designs.sh
.docs/: README.md
.utils/: README.md  fmri_utils.js
ax_cpt_rdoc__fmri/: config.json  experiment.js  style.css
ax_cpt_rdoc_practice__fmri/: config.json  experiment.js
cued_task_switching_rdoc__fmri/: config.json  experiment.js  style.css
cued_task_switching_rdoc_practice__fmri/: config.json  experiment.js
flanker_rdoc__fmri/: config.json  experiment.js  (+1 more)
rdoc_launch/: README.md  pyproject.toml
rdoc_launch/src/rdoc_launch/: battery.py  cli.py  config.py  counterbalancing.py  export.py  runner.py  sessions.py  tasks.py  validate.py
rdoc_launch/tests/: test_battery.py  test_cli.py  test_counterbalancing.py  test_export.py  test_runner.py  test_sessions.py  test_tasks.py  test_validate.py
rdoc_sync/: README.md  pyproject.toml  runs_table.sql
rdoc_sync/launchd/: com.poldracklab.rdoc-sync.plist
rdoc_sync/migrations/: 001_rename_n_trials_to_n_records.sql
rdoc_sync/src/rdoc_sync/: cli.py  config.py  dropbox_push.py  normalize.py  parse.py  payload.py  report.py  supabase_client.py
rdoc_sync/tests/: test_cli.py  test_config.py  test_dropbox_push.py  test_normalize.py  test_parse.py  test_payload.py  test_report.py  test_supabase_client.py
(+744 files in other folders)
