[project]
name = "rdoc-launch"
version = "0.1.0"
description = "Launch RDoC fMRI session batteries from local counterbalancing"
requires-python = ">=3.11"
dependencies = ["gspread>=6.0"]

[project.scripts]
rdoc-launch = "rdoc_launch.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdoc_launch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
