[project]
name = "rdoc-sync"
version = "0.1.0"
description = "Sync RDoC fMRI runs to Supabase and Dropbox"
requires-python = ">=3.11"
dependencies = ["supabase>=2.0", "python-dotenv>=1.0"]

[project.scripts]
rdoc-sync = "rdoc_sync.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdoc_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
